@@ -159,7 +159,6 @@ node_conflicting_urlfield_update=Das urlfield kann nicht mit den Werten "{0}" be
 
 node_error_conflict_detected=Der Node kann nicht aktualisiert werden da ein Konflikt mit einer bestehenden Bearbeitungskopie festgestellt wurde.
 node_error_draft_not_found=Es konnte keine Bearbeitungversion für die Version {0} und Sprache {1} gefunden werden.
-node_error_version_missing=Für die Aktualisierung eines Node muss zwingend eine Version definiert werden.
 node_error_migration_incomplete=Die Migration für den Node wurde noch nicht abgeschlossen. Es ist daher derzeit nicht möglich den Node zu aktualisieren.
 node_error_parent_containers_not_published=Mindestens ein Node welcher den Pfad zum zu publizierenden Node bildet wurde nicht publiziert. Alle Nodes im Pfad müssen publiziert sein. Betroffener Node {0}.
 node_error_children_containers_still_published=Mindestens ein Kind Node ist noch publiziert. Alle Kind Nodes eines nicht publizierten Nodes müssen ebenfalls nicht publiziert sein.
