@@ -156,7 +156,6 @@ node_conflicting_segmentfield_publish=The Node cannot be published, because of a
 node_conflicting_urlfield_update=The urlfield values "{0}" can't be used since those are already being used by node {1}/{2}.
 node_error_conflict_detected=The Node cannot be updated because a conflict with an existing draft version has been detected.
 node_error_draft_not_found=No draft could be found of version {0} and language {1}.
-node_error_version_missing=It is mandatory to specify a version when updating a node. 
 node_error_migration_incomplete=The node has not yet been migrated and thus cannot be updated.
 node_error_parent_containers_not_published=At least one node which is part of the path to the node which should be published is not published. All nodes within the path must be published. Affected node {0}.
 node_error_children_containers_still_published=At least one child node is still published. All children of a draft node must also be drafts.
